root-sync/enforce-sidecar-injection/pod-sidecar-injection-annotation-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: "Annotation `sidecar.istio.io/inject: false` should not be applied on workload pods which will bypass istio proxy."
  name: podsidecarinjectionannotation
spec:
  crd:
    spec:
      names:
        kind: PodSidecarInjectionAnnotation
      validation:
        legacySchema: true
        openAPIV3Schema: {}
  targets:
  - rego: |-
      package asm.security.workloadpolicy
      resource = input.review.object
      spec = resource.spec
      forbidden_injection_annotation := {"key": "sidecar.istio.io/inject", "value": "false"}
      violation[{"msg": msg}] {
          is_pod(input.review.kind)
          contains(resource.metadata.annotations[forbidden_injection_annotation["key"]], forbidden_injection_annotation["value"])
          msg := sprintf("The annotation %v: %v should not be applied on workload pods", [forbidden_injection_annotation["key"], forbidden_injection_annotation["value"]])
      }
      is_pod(kind) {
          kind.kind == "Pod"
      }
    target: admission.k8s.gatekeeper.sh
